--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
   }
 }
